# ragcore

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ragcore/: __init__.py  config.py  crag.py  embedding.py  evaluation.py  hyde.py  main.py  models.py  multimodal.py  multivector.py  query_expansion.py  raptor.py  reranker.py  retrieval.py
ragcore/chunking/: __init__.py  semantic.py
ragcore/graph/: __init__.py  retriever.py  store.py
ragcore/server/: __init__.py  mcp.py  middleware.py  rest.py  streaming.py
ragcore/store/: __init__.py  bm25.py  cache.py  chroma.py  ingest.py
tests/: conftest.py  test_bm25.py  test_chunk_hierarchy.py  test_config.py  test_crag.py  test_embedding.py  test_evaluation.py  test_graphrag.py  test_hyde.py  test_ingest.py  test_mcp.py  test_multimodal.py  test_multivector.py  test_query_expansion.py  test_raptor.py  test_reranker.py  test_rest.py  test_retrieval.py  test_semantic_chunking.py  test_streaming.py
